--- a/configuration/projectConfig.json
+++ b/configuration/projectConfig.json
@@ -1,10 +1,10 @@
 {
     "projectName": "mlops-e2e",
-    "repoType": "codecommit",
+    "repoType": "git",
     "git": {
-        "githubConnectionArn": "",
-        "githubRepoOwner": "",
-        "githubRepoName": ""
+        "githubConnectionArn": "arn:aws:codestar-connections:ap-northeast-1:686246596212:connection/0e5abaa1-5c14-4482-ba72-adc83e8b77bc",
+        "githubRepoOwner": "Ryoya-Mitsuhashi-Sony",
+        "githubRepoName": "mlops-e2e"
     },
     "modelEndpointExportNamePrefix": "ModelHostingEndpoint",
     "ipPermitList": [
